# ease-music-terminal

./: .gitignore  Cargo.toml  README.md
src/: downloader.rs  main.rs
src/api_type/: api_type.rs  mod.rs
src/app/: app.rs  image.rs  input.rs  mod.rs  ui.rs
src/util/: lyric_parser.rs  mod.rs  network.rs  utils.rs
