[package]
name = "ease-music-terminal"
version = "0.1.0"
authors = ["hongshen <ustchcl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
reqwest = { version = "0.10", features = ["json", "blocking", "cookies"] }
tokio = { version = "1.0.1", features = ["full"] }
dirs = "3.0.1"
error-chain = "0.12.4"
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
crossterm = { version = "0.19.0" }
rand = "0.8.0"
argh = "0.1.4"
serde_json = "1.0.61"
serde = "1.0.118"
anyhow = "1.0.37"
regex = "1.4.2"
dotenv = "0.15.0"
